[gd_scene load_steps=29 format=2]

[ext_resource path="res://Menu/Images/leaf_three_trim.png" type="Texture" id=1]
[ext_resource path="res://Menu/menu_font.tres" type="DynamicFont" id=2]
[ext_resource path="res://Menu/Main.gd" type="Script" id=3]
[ext_resource path="res://Menu/main_button.tres" type="StyleBox" id=4]
[ext_resource path="res://Music/autumn keys - l u v e p/autumn keys - l u v e p - 04 l u v t e a.ogg" type="AudioStream" id=5]
[ext_resource path="res://Menu/Images/leaf_two_trim.png" type="Texture" id=6]
[ext_resource path="res://Menu/Images/leaf_one_trim.png" type="Texture" id=7]
[ext_resource path="res://Menu/Nothing-Regular (1).ttf" type="DynamicFontData" id=8]
[ext_resource path="res://Fade_Out.tres" type="Animation" id=9]
[ext_resource path="res://Fade_Music.tres" type="Animation" id=10]

[sub_resource type="Curve" id=12]
min_value = -360.0
max_value = 360.0
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.993421, -98.1818 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=13]
curve = SubResource( 12 )

[sub_resource type="ParticlesMaterial" id=14]
emission_shape = 2
emission_box_extents = Vector3( 500, 10, 1 )
flag_rotate_y = true
flag_disable_z = true
gravity = Vector3( 0, 10, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
angle = 360.0
angle_random = 1.0
angle_curve = SubResource( 13 )
scale = 0.5

[sub_resource type="Curve" id=15]
min_value = -360.0
max_value = 360.0
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.993421, 79.3636 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=16]
curve = SubResource( 15 )

[sub_resource type="ParticlesMaterial" id=17]
emission_shape = 2
emission_box_extents = Vector3( 500, 10, 1 )
flag_disable_z = true
gravity = Vector3( 0, 15, 0 )
initial_velocity = 15.0
initial_velocity_random = 0.5
orbit_velocity = 0.0
orbit_velocity_random = 0.0
angle = 360.0
angle_random = 1.0
angle_curve = SubResource( 16 )

[sub_resource type="Curve" id=18]
min_value = -360.0
max_value = 360.0
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, -71.1818 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=19]
curve = SubResource( 18 )

[sub_resource type="ParticlesMaterial" id=20]
emission_shape = 2
emission_box_extents = Vector3( 500, 10, 0 )
flag_rotate_y = true
flag_disable_z = true
gravity = Vector3( 0, 20, 0 )
initial_velocity = 15.0
initial_velocity_random = 0.5
orbit_velocity = 0.0
orbit_velocity_random = 0.0
angle = 360.0
angle_random = 1.0
angle_curve = SubResource( 19 )

[sub_resource type="DynamicFontData" id=1]
font_path = "res://Test/Font/Nothing-Regular.ttf"

[sub_resource type="DynamicFont" id=2]
size = 144
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = SubResource( 1 )

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=9]

[sub_resource type="StyleBoxEmpty" id=10]

[sub_resource type="StyleBoxEmpty" id=11]

[sub_resource type="DynamicFont" id=21]
size = 24
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 8 )

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false,
"_edit_vertical_guides_": [ -353.065 ]
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Particles" type="Node2D" parent="."]

[node name="Leaf_Three" type="Particles2D" parent="Particles"]
position = Vector2( 515.238, -80.0249 )
amount = 10
lifetime = 15.0
process_material = SubResource( 14 )
texture = ExtResource( 1 )

[node name="Leaf_Two" type="Particles2D" parent="Particles"]
position = Vector2( 516.022, -78.5862 )
amount = 20
lifetime = 13.0
process_material = SubResource( 17 )
texture = ExtResource( 6 )

[node name="Leaf_One" type="Particles2D" parent="Particles"]
position = Vector2( 515.238, -80.0249 )
amount = 15
lifetime = 10.0
process_material = SubResource( 20 )
texture = ExtResource( 7 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -2.66821
margin_right = -2.66821
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer"]
margin_right = 1024.0
margin_bottom = 600.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/CenterContainer"]
margin_left = 247.0
margin_top = 174.0
margin_right = 777.0
margin_bottom = 426.0
custom_constants/separation = 13

[node name="CenterContainer3" type="CenterContainer" parent="MarginContainer/CenterContainer/VBoxContainer"]
margin_right = 530.0
margin_bottom = 131.0

[node name="Label" type="Label" parent="MarginContainer/CenterContainer/VBoxContainer/CenterContainer3"]
margin_right = 530.0
margin_bottom = 131.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "NOTHING"

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/CenterContainer/VBoxContainer"]
margin_top = 144.0
margin_right = 530.0
margin_bottom = 174.0

[node name="start" type="Button" parent="MarginContainer/CenterContainer/VBoxContainer/CenterContainer"]
margin_left = 145.0
margin_right = 385.0
margin_bottom = 30.0
custom_styles/hover = ExtResource( 4 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
text = "START NEW GAME"

[node name="CenterContainer4" type="CenterContainer" parent="MarginContainer/CenterContainer/VBoxContainer"]
margin_top = 187.0
margin_right = 530.0
margin_bottom = 217.0

[node name="settings" type="Button" parent="MarginContainer/CenterContainer/VBoxContainer/CenterContainer4"]
margin_left = 193.0
margin_right = 336.0
margin_bottom = 30.0
custom_styles/hover = ExtResource( 4 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/focus = SubResource( 9 )
custom_styles/disabled = SubResource( 10 )
custom_styles/normal = SubResource( 11 )
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
text = "SETTINGS"

[node name="CenterContainer5" type="CenterContainer" parent="MarginContainer/CenterContainer/VBoxContainer"]
margin_top = 230.0
margin_right = 530.0
margin_bottom = 252.0

[node name="Label" type="Label" parent="MarginContainer/CenterContainer/VBoxContainer/CenterContainer5"]
margin_left = 76.0
margin_right = 453.0
margin_bottom = 22.0
custom_fonts/font = SubResource( 21 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "All Music by Autumn Keys (Creative Commons)"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
autoplay = true
bus = "Music"

[node name="FadeOut" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="FadeOut"]
wait_time = 1.5
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="FadeOut"]
anims/Fade_Out = ExtResource( 9 )

[node name="AnimationPlayer2" type="AnimationPlayer" parent="FadeOut"]
anims/Fade_Music = ExtResource( 10 )

[node name="ColorRect2" type="ColorRect" parent="FadeOut"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0, 0, 0, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="MarginContainer/CenterContainer/VBoxContainer/CenterContainer/start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="MarginContainer/CenterContainer/VBoxContainer/CenterContainer4/settings" to="." method="_on_settings_pressed"]
[connection signal="timeout" from="FadeOut/Timer" to="." method="_on_Timer_timeout"]
